--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "commonjs",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "cashfree-pg": "^5.0.8",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "sequelize": "^6.37.7"
   }
