--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,11 @@
     "bcrypt": "^6.0.0",
     "cashfree-pg": "^5.0.8",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
