--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
-    "sequelize": "^6.37.7",
-    "sib-api-v3-sdk": "^8.5.0"
+    "nodemailer": "^7.0.5",
+    "sequelize": "^6.37.7"
   }
 }
