--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "type": "commonjs",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "cashfree-pg": "^5.0.8",
@@ -19,8 +20,10 @@
     "express": "^5.1.0",
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1",
     "mysql2": "^3.14.3",
     "nodemailer": "^7.0.5",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
